tests/NormalTests/paczka1/fuzzy1/18494990.err
Error in line 2: cjBx S804 26,1
Error in line 6: qHgjfCr A892 43,2
Error in line 16: Yk2Q7LzJtJ A824 47,9
Error in line 30: Rz6gQbuWf S04 59,7
Error in line 28: Rz6gQbuWf S804 39,1
